2010-01-11  - BUG: the graphicsview is smaller than the area it visualizes?!    how to reproduce:     - compile last commit (not this one)     - start the program     - use the cursor keys, it will be able to move the graphicsView some pixels    FIXED with:    void movableGraphicsView::resizeEvent ( QResizeEvent * event ) {       setSceneRect(QRect(0, 0, width()-6, height()-6));

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,17 +13,18 @@ find_package(Qt4)
 
 
 SET( libnoise-view_SOURCES 
+ src/TileBox.cpp 
  src/mainWidget.cpp 
  src/noiseutils.cpp 
  src/main.cpp 
  src/renderThread.cpp 
- src/movableGraphicsScene.cpp 
  src/movableGraphicsView.cpp 
  src/renderJob.cpp 
  src/threadJobControl.cpp
 )
 
 SET( libnoise-view_MOC_HEADERS
+  src/TileBox.h
   src/mainWidget.h
   src/renderThread.h
   src/threadJobControl.h
